# Bone-GPT

./: LICENSE.md  Makefile  README.md
doc/: Building.md
src/: .config.in  CMakeLists.txt  boneGPT.py  openai_prompt.json  openai_prompt.txt  requirements.txt  startBoneGPT.sh
